--- a/Torres_de_janoi/MainPage.xaml
+++ b/Torres_de_janoi/MainPage.xaml
@@ -4,10 +4,10 @@
              x:Class="Torres_de_janoi.MainPage">
     <StackLayout VerticalOptions="Center">
         <Grid>
-            <Grid.RowDefinitions>
+            <!--<Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition Height="120"/>
-            </Grid.RowDefinitions>
+            </Grid.RowDefinitions>-->
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
@@ -16,11 +16,10 @@
             <StackLayout x:Name="t1" VerticalOptions="End" HorizontalOptions="Center"></StackLayout>
             <StackLayout x:Name="t2" VerticalOptions="End" HorizontalOptions="Center" Grid.Column="1"></StackLayout>
             <StackLayout x:Name="t3" VerticalOptions="End" HorizontalOptions="Center" Grid.Column="2"></StackLayout>
-            <StackLayout HorizontalOptions="Center">
-                <Stepper x:Name="Step" Minimum="3" Maximum="8 " ValueChanged="Step_ValueChanged"/>
-                <Button Text="solucionar" Clicked="Button_Clicked"></Button>
-
-            </StackLayout>
         </Grid>
+            <StackLayout >
+                <Stepper HorizontalOptions="Center" x:Name="Step" Minimum="3" Maximum="8" ValueChanged="Step_ValueChanged"/>
+            <Button Text="solucionar" Clicked="Button_Clicked"></Button>
+        </StackLayout>
     </StackLayout>
 </ContentPage>
